--- a/0.1/common/index.css
+++ b/0.1/common/index.css
@@ -1,3 +1,6 @@
+body {
+    font-size: 15px;
+}
 header h1 {
     font-size: 200%;
     background-image: url('https://raw.githubusercontent.com/lury-lang/lury/master/logo/lury.png');
@@ -14,6 +17,25 @@ header ul.nav {
 }
 hr {
     margin-top: 10px;
+}
+.col-main {
+    padding-left: 32px;
+}
+.markdown-body {
+    padding: 0;
+}
+.markdown-body pre {
+    margin: 1em 3em;
+}
+.markdown-body table {
+    margin: 2em auto;
+    width: auto;
+    display: table;
+}
+a[regex],
+a[regex]:visited {
+    font-weight: bold;
+    color: black !important;
 }
 
 /**** Affix Navigation ****/
@@ -35,7 +57,7 @@ hr {
 .affix-nav .nav>li>a {
     color: #777;
     border-left: 2px solid transparent;
-    padding: 0.5em 0 0.5em 30px;
+    padding: 0.3em 0 0.3em 30px;
     font-weight: normal;
 }
 .affix-nav .nav .nav>li>a {
