index.cssにMarkdown誤判定回避用文字クラスを追加

--- a/0.1/common/index.css
+++ b/0.1/common/index.css
@@ -48,6 +48,18 @@ a.permalink {
     opacity: 0;
 }
 
+.bracket-left:before {
+    content: '[';
+}
+
+.bracket-right:after {
+    content: ']';
+}
+
+.backquote:after {
+    content: '`';
+}
+
 /**** Affix Navigation ****/
 
 .affix-nav {
