--- a/0.1/common/index.css
+++ b/0.1/common/index.css
@@ -47,6 +47,11 @@ a.permalink {
     font-weight: normal;
     opacity: 0;
 }
+video {
+    margin: 1em auto;
+    width: auto;
+    display: block;
+}
 
 .bracket-left:before {
     content: '[';
